--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,71 @@
-# Compiled class file
-*.class
+# ========== Android/IntelliJ/Gradle ignores ==========
 
-# Log file
+# Built application files
+*.apk
+*.ap_
+*.aab
+
+# Gradle files
+.gradle/
+build/
+**/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+# Local configuration files
+local.properties
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# Mac system files
+.DS_Store
+
+# Log files
 *.log
 
-# BlueJ files
-*.ctxt
+# Kotlin/Java compile output
+out/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Android Studio Navigation editor temp files
+.navigation/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Auto-generated files
+captures/
+outputs/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Android Studio 2020.3+ (Chipmunk) cache folder
+.idea/caches/
+.idea/libraries/
+.idea/modules.xml
+.idea/workspace.xml
+.idea/navEditor.xml
+.idea/assetWizardSettings.xml
+.idea/gradle.xml
 
-# Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
-.kotlin/
+# Jetpack Compose previews cache
+.idea/compose-preview/
+
+# Misc
+*.keystore
+*.jks
+
+# Crashlytics/Analytics
+fabric.properties
+crashlytics.properties
+
+# Firebase
+google-services.json
+firebase-debug.log
+
+# Virtual device files
+*.avd
+*.avd.lock
+
+# IntelliJ run configurations
+.idea/runConfigurations/
+
+# OS
+Thumbs.db
+ehthumbs.db
+desktop.ini
