--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
 
     <application
-        android:label="MyMusicPlayer"
+        android:label="Vibra"
+        android:theme="@style/Theme.Vibra"
         android:icon="@mipmap/vibra_logo">
         <activity android:name=".MainActivity"
             android:exported="true">
