--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:icon="@mipmap/veyra_logo">
 
         <service
+            android:name=".service.DownloadService"
+            android:enabled="true"
+            android:exported="false" />
+
+        <service
             android:name=".service.NotificationService"
             android:foregroundServiceType="mediaPlayback"
             android:exported="false" />
